parkrun-stats - Make CourseEventSummaryChecker more predictable.